@@ -6,6 +6,7 @@
 ## Version 0.3
 ###########################################################
 - New function decisionStump to compute 1-level decision trees (1-rules).
+- Added print and predict method for object of class decisionStump
 - Changed return value of perfMeasures and perfScores to object of respective
   class.
 - Introduced print methods for class perfMeasure and perfScore.
